Create main logic

--- a/ТТТ/ТТТ.csproj
+++ b/ТТТ/ТТТ.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -80,7 +81,13 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="icon\" />
+    <None Include="icon\circle1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="icon\cross.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="icon\cross1.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
