--- a/ТТТ/ТТТ.csproj
+++ b/ТТТ/ТТТ.csproj
@@ -89,5 +89,8 @@
   <ItemGroup>
     <None Include="icon\cross1.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="icon\ret.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
